# MojitoProcessor

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
Example_Notebooks/: gw_processing_pipeline.ipynb  noise_processing_pipeline.ipynb
MojitoProcessor/: SigProcessing.py  __init__.py  __version__.py  load.py
MojitoProcessor/io/: read.py  write.py
MojitoProcessor/pipelines/: __init__.py  read_and_process.py
MojitoProcessor/process/: sigprocess.py
docs/: conf.py
docs/notebooks/: gw_processing_pipeline.ipynb  noise_processing_pipeline.ipynb
tests/: conftest.py  test_read_and_process.py  test_sig_processing.py  test_write.py
