[project]
name = "mojito-processor"
dynamic = ["version"]
description = "Postprocessing steps from LISA Mojito L01 data for use with L2D noise analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ollie Burke", email = "ollie.burke@glasgow.ac.uk"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mojito>=0.5.0",
    "numpy>=2.0",
    "scipy>=1.10",
]

[project.urls]
Documentation = "https://ollieburke.github.io/MojitoProcessor/"
Repository = "https://github.com/OllieBurke/MojitoProcessor"
Zenodo = "https://doi.org/10.5281/zenodo.18718620"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
    "nb-clean>=4.0.1",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "nbsphinx",
    "ipykernel>=7.0",
    "jupyter>=1.0",
    "sphinx-autodoc-typehints",
    "ipykernel>=7.2.0",
    "matplotlib>=3.5",
]
notebooks = ["ipykernel>=7.0", "jupyter>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["MojitoProcessor"]

[tool.hatch.version]
path = "MojitoProcessor/__version__.py"

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=MojitoProcessor --cov-report=html --cov-report=term-missing"
